fix(java:S6204): replace Collectors.toList() with Stream.toList() in FoodDAOFS
Java 16+ provides Stream.toList() which returns an unmodifiable list,
making Collectors.toList() redundant. Updated getAllFoodBase() and
getAllAddOn() methods. Removed now-unused Collectors import.